name:                Set
version:             0.1.0.0
synopsis:            Demonstration of sets as lists and as trees
homepage:            http://101companies.org/wiki/Functional_data_structure
license:             BSD3
license-file:        LICENSE
author:              Ralf Lämmel
maintainer:          softlang@uni-koblenz.de
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Set,
                       BinarySearchTree,
                       ListSet
  build-depends:       base >=4.6 && <4.7,
                       deepseq >=1.3 && <1.4
  default-language:    Haskell2010

Test-Suite Tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base >=4.6 && <4.7,
                       deepseq >=1.3 && <1.4,
                       HUnit >=1.2 && <1.3
  default-language:    Haskell2010

Benchmark Benchmarks
  type:                exitcode-stdio-1.0
  main-is:             Benchmarks.hs
  build-depends:       base >=4.6 && <4.7,
                       criterion >=0.8 && <0.9,
                       deepseq >=1.3 && <1.4,
                       random >=1.0 && <1.1
  default-language:    Haskell2010