name:                Cabal
version:             0.1.0.0
synopsis:            Naive and skew heaps
homepage:            http://101companies.org/wiki/Functional_data_structure
license:             BSD3
license-file:        LICENSE
author:              Ralf Lämmel
maintainer:          softlang@uni-koblenz.de
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Heap,
                       Tree,
                       NaiveHeap,
                       SkewHeap
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010

Test-Suite Tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base >=4.6 && <4.7,
                       HUnit >=1.2 && <1.3
  default-language:    Haskell2010

